--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
  body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
-  background-color: rgb(247, 233, 215); /* if you want the light version */
+  background-color: rgb(247, 233, 215);
 }
 
 h3 {
@@ -17,12 +17,10 @@ h3 {
   font-size: 20;
  }
 
- @media (max-width: 960px) {
+ @media (max-width: 10000px) {
   .container{
     width: 700px;
     margin: 10px auto;
-    /* text-align: center; */
-
   }
  }
 
