--- a/style.css
+++ b/style.css
@@ -17,12 +17,12 @@ h3 {
   font-size: 20;
  }
 
- @media (max-width: 1200px) {
+ /* @media (max-width: 1200px) {
   .container{
     width: 1000px;
     margin: 10px auto;
   }
- }
+ } */
  @media (max-width: 920px) {
   .container{
     width: 700px;
