--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@ h3 {
 
  @media (max-width: 1200px) {
   .container{
-    width: 1000px;
+    width: 700;
     margin: 10px auto;
+    background-color: blue;
   }
  }
  @media (max-width: 920px) {
