--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h3 {
   .container{
     width: 1000px;
     margin: 10px auto;
-    background-color: blue;
+    /* background-color: blue; */
   }
  }
  @media (max-width: 920px) {
